--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
           <input class="toDo__input" type="text" />
           <button class="toDo__button">Добавить</button>
         </form>
-        <ul class="toDo__list toDo__list-none">
-            
-   
-        </ul>
+        <ul class="toDo__list toDo__list-none"></ul>
         <div class="footer footer__show">
           <button class="footer__delete-check">Удалить отмеченные</button>
           <button class="footer__delete-all">Удалить все</button>
